added img link feature

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </div>
                 </div>
 
-                <div id="tweetArea" class="border border-primary" class="bg-light">
+                <div id="tweetArea" class="border border-primary wrapword" class="bg-light">
                     <div id="tweet" class="d-flex">
                         <div class="bg-success p-3">
                             <img src="img/pic2.jpg" height="50" class="rounded">
